--- a/Hello.html
+++ b/Hello.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <script>
         alert("Hello World..!");
+        let input =prompt("입력해주세요.");
+        console.log(input);
     </script>
     <script type="text/javascript" src="Hello.js"></script>
 </head>
